# MongoDB_task

./: README.md  pyproject.toml
authors_quotes_mongo/: seeds.py
